--- a/play.html
+++ b/play.html
@@ -6,18 +6,25 @@
             margin: 0px;
             padding: 0px;
         }
-        #myCanvas {
-            width: 80vw;
-            height: 80vh;
+        #dxCanvasWrapper {
+            width: 100vw;
+            height: 100vh;
             border:1px solid black;
+        }
+        #dxCanvasWrapper >canvas {
+            /*width:100%;*/
+            /*height:100%;*/
+            border:1px solid red;
         }
     </style>
 </head>
 <body>
-<canvas id="myCanvas"></canvas>
+<div id="dxCanvasWrapper">
+    <canvas id="dxCanvas"></canvas>
+</div>
 <script src="dx-canvas.js"></script>
 <script>
-    dx_canvas.initCanvas('myCanvas');
+    dx_canvas.initCanvas('dxCanvas');
 </script>
 </body>
 </html>
