--- a/play.html
+++ b/play.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div id="dxCanvasWrapper">
-    <canvas id="dxCanvas"></canvas>
+    <canvas id="dxCanvas">Please upgrade your browser to view this content</canvas>
 </div>
 <script src="dx-canvas.js"></script>
 <script>
