--- a/tests/test.html
+++ b/tests/test.html
@@ -22,10 +22,12 @@
 <div id="dxCanvasWrapper">
     <canvas id="dxCanvas">Please upgrade your browser to view this content</canvas>
 </div>
-<script src="dx-canvas.js"></script>
+<script src="../dx-canvas.js"></script>
 <script>
+    const script_start_int = window.location.href.indexOf("test.html");
+    const root_str = window.location.href.substr(0,script_start_int);
     async function initCanvas() {
-        const response = await fetch('http://localhost/GitHub/divblox-canvas/test.json');
+        const response = await fetch(root_str+'test.json');
         const data_json = await response.json();
         dx_canvas.initCanvas('dxCanvas',data_json);
     }
