--- a/tests/test.html
+++ b/tests/test.html
@@ -28,7 +28,7 @@
     const script_start_index_int = window.location.href.indexOf("test.html");
     const root_str = window.location.href.substr(0,script_start_index_int);
     async function initCanvas() {
-        const response = await fetch(root_str+'test.json');
+        const response = await fetch(root_str+'test-1.json');
         const data_json = await response.json();
         const dx_canvas = new MyCustomCanvas('dxCanvas',data_json)
     }
