Attempt at scaling content

--- a/tests/test.html
+++ b/tests/test.html
@@ -22,17 +22,19 @@
 <div id="dxCanvasWrapper">
     <canvas id="dxCanvas">Please upgrade your browser to view this content</canvas>
 </div>
-<div id="data-div1">
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
-    <p>Test data-div1 content here</p>
+<div id="data-div1" style="/*border:1px solid blue;*/">
+    <div style="/*border:1px solid red;*/">
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+        <p>Test data-div1 content here</p>
+    </div>
 </div>
 <script src="../dx-canvas.js"></script>
 <script src="custom-implementation.js"></script>
