HTML content supported via iframe

--- a/tests/test.html
+++ b/tests/test.html
@@ -23,18 +23,7 @@
     <canvas id="dxCanvas">Please upgrade your browser to view this content</canvas>
 </div>
 <div id="data-div1" style="/*border:1px solid blue;*/">
-    <div style="/*border:1px solid red;*/">
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-        <p>Test data-div1 content here</p>
-    </div>
+    <iframe src="iframe_content.html" style="width:100%;border:none;height:100%;"></iframe>
 </div>
 <script src="../dx-canvas.js"></script>
 <script src="custom-implementation.js"></script>
