--- a/tests/test.html
+++ b/tests/test.html
@@ -7,8 +7,8 @@
             padding: 0px;
         }
         #dxCanvasWrapper {
-            width: 80vw;
-            height: 80vh;
+            width: 100vw;
+            height: 100vh;
             /*border:1px solid black;*/
         }
         #dxCanvasWrapper >canvas {
@@ -22,8 +22,8 @@
 <div id="dxCanvasWrapper">
     <canvas id="dxCanvas">Please upgrade your browser to view this content</canvas>
 </div>
-<div id="data-div1" style="/*border:1px solid blue;*/">
-    <iframe src="iframe_content.html" style="width:100%;border:none;height:100%;"></iframe>
+<div id="data-div1">
+    <iframe src="iframe_content.html" style="width:100%;border:none;height:100%;margin:0;"></iframe>
 </div>
 <script src="../dx-canvas.js"></script>
 <script src="custom-implementation.js"></script>
