--- a/tests/test.html
+++ b/tests/test.html
@@ -75,7 +75,7 @@
     let dx_canvas = null;
 
     async function initCanvas() {
-        const response = await fetch(root_str+'test-model.json');
+        const response = await fetch(root_str+'test.json');
         const data_json = await response.json();
         dx_canvas = new MyCustomCanvas('dxCanvas',data_json,{dx_canvas_root:"../",background_color:"#E8F3EF",base_font_family:"Comic Sans MS"});
         const download_btn = document.getElementById('btnExportCanvas');
