--- a/examples/example_1/test.html
+++ b/examples/example_1/test.html
@@ -9,21 +9,21 @@ This page uses bootstrap to facilitate its UI, simply because it is easy to get 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <style>
         #dxCanvasWrapper {
             padding:0 !important;
             margin:0 !important;
             width: 100%;
             height: 100%;
-            border:1px solid black;
+            /*border:1px solid black;*/
         }
         #dxCanvasWrapper >canvas {
             padding:0 !important;
             margin:0 !important;
             width:100%;
             height:100%;
-            border:1px solid red;
+            /*border:1px solid red;*/
         }
     </style>
     <title>Dx Canvas - Example</title>
@@ -80,7 +80,15 @@ This page uses bootstrap to facilitate its UI, simply because it is easy to get 
     async function initCanvas() {
         const response = await fetch(rootStr+'test-model.json');
         const dataJson = await response.json();
-        dxCanvas = new MyCustomCanvas('dxCanvas',dataJson,{dxCanvasRoot:"../../",backgroundColor:"#E8F3EF",baseFontFamily:"Comic Sans MS"});
+        dxCanvas = new MyCustomCanvas(
+            'dxCanvas',
+            dataJson,
+            {
+                dxCanvasRoot: "../../",
+                backgroundColor: "#E8F3EF",
+                baseFontFamily: "Comic Sans MS",
+                isDebugModeActive: true
+            });
         const downloadBtn = document.getElementById('btnExportCanvas');
         downloadBtn.addEventListener('click', function () {
             dxCanvas.downloadCanvasPng();
@@ -99,12 +107,12 @@ This page uses bootstrap to facilitate its UI, simply because it is easy to get 
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
 <!-- Option 2: Separate Popper and Bootstrap JS -->
 <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 -->
 </body>
 </html>
