Better zoom  to fit

--- a/examples/example_2/test.html
+++ b/examples/example_2/test.html
@@ -114,6 +114,7 @@ This page uses bootstrap to facilitate its UI, simply because it is easy to get 
             console.log("Is null");
         }
         dxCanvas.zoomToFitCurrentModel();
+        //dxCanvas.zoomToFitCustom({left:1500,top:200,width:200,height:200});
     }
 </script>
 <!-- Optional JavaScript; choose one of the two! -->
